Fri Nov 20 14:39:56 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/net/http.rb: set hostname before call ossl_ssl_set_session.
	  [Bug #11401][ruby-core:70152][fix GH-964] Patch by @mkarnebeek

Fri Nov 20 12:53:19 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* array.c: clarify docs for take_while/drop_while samples.
	  [ci skip][fix GH-1028] Patch by @leriksen

Fri Nov 20 12:48:04 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ext/socket/socket.c: remove mention of :UNIX in getaddrinfo().
	  It's typically not a support option.
	  [ci skip][fix GH-990] Patch by @eam

Fri Nov 20 12:44:06 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/rss/syndication.rb: Add nodoc marker for #validate_sy_updatePeriod.
	  [ci skip][fix GH-1105] Patch by @davydovanton

Fri Nov 20 09:05:21 2015  Koichi Sasada  <ko1@atdot.net>

	* vm.c (rb_vm_cref_replace_with_duplicated_cref): added.

	  CREFs should not be shared by methods between `using'.
	  [Bug #11247]

	* vm_insnhelper.c (vm_cref_replace_with_duplicated_cref): ditto.

	* vm.c (vm_cref_dup): should copy refinements correctly.

	* eval.c: use rb_vm_cref_replace_with_duplicated_cref().

	* eval_intern.h: add a decl. of
	  rb_vm_cref_replace_with_duplicated_cref().

	* vm_eval.c (eval_string_with_cref): do not need to pass
	  scope's CREF because VM can find out CREF from stack frames.

	* test/ruby/test_refinement.rb: add a test.

Fri Nov 20 06:52:53 2015  Eric Wong  <e@80x24.org>

	* .gitattributes: new file for git users
	  [ruby-core:71578] [Feature #11713]

Thu Nov 19 22:35:31 2015  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c: Check buffer full and ignore MSG_TRUNC flag.
	  buffer fullness is more robust to detect the message is too big for
	  the buffer.
	  AIX 7.1 recvmsg doesn't set MSG_TRUNC for rflags when MSG_PEEK is
	  given.

Thu Nov 19 21:55:11 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_start): force to invoke GC by GC.start
	  even if it is GC.disable'd.

	* test/ruby/test_gc.rb: add a test.